--- a/opdracht2.1/test.html
+++ b/opdracht2.1/test.html
@@ -23,7 +23,7 @@
     </div>
      </div>
     </br>
-    <p> gemaakt door Dylan mahn.
-    nagekeken door yoshua</p>
+    <p> gemaakt door Dylan mahn.</p>
+    <p>nagekeken door yoshua</p>
 </body>
 </html>
