--- a/opdracht2.2/index.html
+++ b/opdracht2.2/index.html
@@ -7,20 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vliegauto's</h1>
-    <img src="images/vliegauto1.jpg" alt="vliegauto">
-    <p>Dit gaat over vliegende auto's</p>
+    <h1>HTML</h1>
+    <img src="images/htmla.png" alt="Html">
+    <p>Html wordt gebruikt om websites te bouwen.</p>
     <br>
-    <h2>De vliegauto</h2>
-    <p class="text1">Een vliegende auto is een auto die net als een gewone auto over de openbare weg mag rijden,
-        maar daarnaast ook kan opstijgen,
-        vliegen en landen als een vliegtuig.</p>
+    <h2>CSS</h2>
+    <p class="text1">CSS is een programeertaal die zorgt voor de opmaak van HTML bestanden.</p>
     <br>
-    <h4>Hoeveel kost een vliegende auto?</h4>
-    <img src="images/vliegauto2.png" alt="vliegauto2">
-    <p>De Amerikaanse luchtvaartautoriteit heeft een auto goedgekeurd die zowel op het land als in de lucht de 200 km/h aantikt.
-        De prijzen beginnen bij 160.000 euro.</p>
-        <h5>De Nederlandse vliegende auto binnekort op de weg</h5>
-        <a href="https://www.ad.nl/auto/nederlandse-vliegende-auto-mag-officieel-de-weg-op-eerste-exemplaren-in-2023-afgeleverd~a055db28/?referrer=https%3A%2F%2Fwww.google.com%2F">Vliegende auto in NL</a>
+    <h4>Waarom gebruik je css samen met html?</h4>
+    <img src="images/css.jpg" alt="Css">
+    <p>Je gebruikt html en css samen, zodat je de website in meer details kan aanpassen.</p>
+        <h5>Wat is Html link</h5>
+        <a href="https://www.kopstorm.com/blog/wat-is-html-en-hoe-werkt-het">dit is html</a>
+
+        <h1>H1</h1>
+       <P>H1 is een soort van koptekst, je hebt ook h2, h3, h4, h5, h6 en de groter het cijfer hoe kleiner het is, dus h6 is he kleinst.</P>
+        <h1>P</h1>
+        <p>P wordt gebruikt om een groot stuk tekst te plaatsen</p>
+        <h1>A</h1>
+        <p>A betekent attribute. het brengt je bijvoorbeeld naar een bepaalde website.</p>
+        <h1>Img</h1>
+        <p>Img wordt gebruikt om aan te geven dat er een foto is.</p>
+        <h1>Table</h1>
+        <p>table is gewoon een tabel</p>
+        <h1>Ul, Ol, li</h1>
+        <p>ul betekent unordered. Dat doet de woorden onderelkaar en bolletje ervoor</p>
+        <p>ol betekent ordered list. Dat doet de woorden onderelkaar, met getallen ervoor.</p>
+        <p>li betekent inside ordered lists unordered lists. Dat doet net als ol en ul maar dan is het gemixed</p>
 </body>
 </html>
