--- a/voor mezelf/mijnwebsite.html
+++ b/voor mezelf/mijnwebsite.html
@@ -7,9 +7,12 @@
 </head>
 <body style="background-color: black;">
 <h1 style="color: red;">Website</h1>
+<nav>
+    <li><a href="something.html">something</a></li>
+</nav>
 <br>
 <hr>
 <br>
-<b style="color: white;">Dussss......</b>
+<b style="color: white;">yo</b>
 </body>
 </html>
