--- a/opdracht4.1/index.html
+++ b/opdracht4.1/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 4.1 - Font & Color</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="style.css">
+   <div class="header">
+    <div class="innerheader">
+        <div class="text_box">
+            <h1>Game releases</h1>
+            <br>
+            <p>De 7 opvallendste games</p>
+        </div>
+    </div>
+   </div>
     <main>
         <header>
             <h1>Game releases september 2022 - De 7 opvallendste games van deze maanden</h1>
