--- a/opdracht3.1/P1-html-css-layout-main/index.html
+++ b/opdracht3.1/P1-html-css-layout-main/index.html
@@ -43,5 +43,8 @@
 <img src="img/hacker.png">
 <p>If you click the "Submit" button, you are in our system.</p>
 <h1>Thank you very much for your visit</h1>
+<footer>
+  <p>Dylan Mahn SOD1B</p>
+</footer>
   </body>
 </html>
