--- a/opdracht3.1/P1-html-css-layout-main/index.html
+++ b/opdracht3.1/P1-html-css-layout-main/index.html
@@ -24,6 +24,7 @@
         <li><a href="#">SQL</a></li>
       </ul>
     </nav>
+    <br><br><br><br><br><br><br><br><br><br>
     <h1>get in our Free program:</h1>
     <br>
     <h2>HTML Forms</h2>
@@ -43,8 +44,11 @@
 <img src="img/hacker.png">
 <p>If you click the "Submit" button, you are in our system.</p>
 <h1>Thank you very much for your visit</h1>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p>Hello</p>
 <footer>
-  <p>Dylan Mahn SOD1B</p>
+  <h1 id="foottext">Dylan Mahn SOD1B</h1>
 </footer>
   </body>
 </html>
