--- a/opdracht3.1/P1-html-css-layout-main/index.html
+++ b/opdracht3.1/P1-html-css-layout-main/index.html
@@ -22,9 +22,19 @@
         <li><a href="#">Javascript</a></li>
         <li><a href="#">PHP</a></li>
         <li><a href="#">SQL</a></li>
+        <li class="dropdown"><a href="dropbtn">Jaar 2</a>
+        <div class="dropdown-content">
+          <a href="">OOP</a>
+          <a href="">LARAVEL</a>
+          <a href="">TESTEN</a>
+        </div>
+      </li>
       </ul>
     </nav>
+    
+
     <br><br><br><br><br><br><br><br><br><br>
+    
     <h1>get in our Free program:</h1>
     <br>
     <h2>HTML Forms</h2>
