--- a/opdracht3.1/P1-html-css-layout-main/index.html
+++ b/opdracht3.1/P1-html-css-layout-main/index.html
@@ -18,18 +18,42 @@
     <nav>
       <img src="./img/hacker.png" id="logo" />
       <ul>
+
         <li><a href="#">HTML/CSS</a></li>
+
         <li><a href="#">Javascript</a></li>
+
         <li><a href="#">PHP</a></li>
+
         <li><a href="#">SQL</a></li>
-        <li class="dropdown"><a href="dropbtn">Jaar 2</a>
-        <div class="dropdown-content">
-          <a href="">OOP</a>
-          <a href="">LARAVEL</a>
-          <a href="">TESTEN</a>
+
+       <div class="dropdown">
+
+        <li class="dropdown2">
+
+          <a href="dropdownbtn" class="dropbtn">Jaar 2</a>
+
+ 
+
+          <div class="dropdown-content">
+
+ 
+
+            <a href="">OOP</a>
+
+ 
+
+            <a href="">LARAVEL</a>
+
+ 
+
+            <a href="">TESTEN</a>
+
+          </div>
+
+        </li>
+
         </div>
-      </li>
-      </ul>
     </nav>
     
 
