--- a/opdracht 6.1 js/index.html
+++ b/opdracht 6.1 js/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Docume</title>
 </head>
 <body>
     <h1 id="kop1">Welkom</h1>
