--- a/opdracht 6.3 js/index.html
+++ b/opdracht 6.3 js/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="kop1">Welkom</h1>
+    <h1 id="kop1"></h1>
     <script src="code.js"></script>
 
-    <button onclick="KleurAanpassen()">Verander van kleur</button>
-    <h2 onclick="KleurAanpassen()">Geen Knop</h2>
+    <h1 onclick="KleurAanpassen()">Welkom</h1>
 </body>
 </html>
