--- a/opdracht6.3/index.html
+++ b/opdracht6.3/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Flexbox Navbar with Login Form</title>
 </head>
 <body>
-    <nav>
-        <div class="navbar">
-            <div class="logo">logo</div>
-            <div>Home</div>
-            <div>About me</div>
-            <div>My projects</div>
-            <div>Contact</div>
-            <div class="login">login</div>
-        </div>
-    </nav>
+
+<header>
+
+<nav class="navbar">
+<div class="navbar-logo">Your Logo</div>
+    
+<ul class="navbar-nav">
+<li class="nav-item"><a href="#">Logo</a></li>
+<li class="nav-item"><a href="#">Home</a></li>
+<li class="nav-item"><a href="#">About me</a></li>
+<li class="nav-item"><a href="#">My projects</a></li>
+<li class="nav-item"><a href="#">Contact</a></li>
+
+<div class="navbar-logo">Login</div>
+</ul>
+</div>
+
+</nav>
+
+</header>
+
 </body>
-</html> 
+</html>
