--- a/Eindopdracht travelly/index.html
+++ b/Eindopdracht travelly/index.html
@@ -7,6 +7,101 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+
+    <nav>
+        <div id="travellynav">
+            <p class="Medium-Font Logo-Family White-Font Left-Margin" id="NavLogo">Travelly</p>
+        </div>
+        <div id="travellynavmenu">
+            <a href="#" class="Small-Font Normal-Family White-Font Link">Locations</a>
+            <a href="#" class="Small-Font Normal-Family White-Font Link">Benefits</a>
+            <a href="#" class="Small-Font Normal-Family White-Font Link">Contact</a>
+        </div>
+    </nav>
+
+    <main>
+        <section id="Location">
+            <p class="Large-Font Normal-Family White-Font Large-Margin Bold-Font">Travel beyond limits.</p>
+            <p class="Medium-Font Normal-Family White-Font Small-Margin">Start your travel at an affordable price with Travelly</p>
+            <p class="Medium-Font Normal-Family White-Font Small-Margin">Contact us now below.</p>
+            <a href="#" class="Link">
+                <div id="LocationsBookDiv" class="Large-Margin">
+                    <p class="Small-Font Normal-Family White-Font">Book now</p>
+                </div>
+            </a>
+        </section>
+
+        <section id="Benefit">
+            <p class="Large-Font Normal-Family White-Font Large-Margin Bold-Font Underlined-Font">Time to explore.</p>
+            <hr style="width: 40%;">
+            <br>
+            <p class="Medium-Font Normal-Family White-Font Small-Margin Left-Margin">Has your dream always been to visit New York?</p>
+            <p class="Medium-Font Normal-Family White-Font Small-Margin Left-Margin">We can make it possible for you</p>
+        </section>
+
+        <section id="TextSection">
+            <div id="TextSectionBlue">
+                <p class="Large-Font Normal-Family White-Font Medium-Margin Bold-Font">The Perfect Travel Experience.</p>
+                <p class="Medium-Font Normal-Family White-Font Small-Margin">We cover everything from picking the perfect hotel,</p>
+                <p class="Medium-Font Normal-Family White-Font Small-Margin">flight and travelling destination</p>
+            </div>
+            <div id="TextSectionWhite">
+                <div class="TextSectionCards">
+                    <div class="TextSectionCardsBar">
+                        <img src="/Eindopdracht travelly/icons/route-solid.svg" alt="RouteIcon" class="TextSectionCardsBarIcons">
+                    </div>
+                    <p class="Medium-Font Normal-Family Large-Margin Bold-Font">Travel</p>
+                    <p class="Small-Font Normal-Family Medium-Margin Bold-Font Centered-Text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ab sint deleniti accusamus facilis, unde aut voluptatem alias eos dolorem soluta doloremque, finding nemo, et architecto officia maxime quae possimus facere!</p>
+                </div>
+
+                <div class="TextSectionCards">
+                    <div class="TextSectionCardsBar">
+                        <img src="/Eindopdracht travelly/icons/bed-solid.svg" alt="BedIcon" class="TextSectionCardsBarIcons">
+                    </div>
+                    <p class="Medium-Font Normal-Family Large-Margin Bold-Font">Hotel</p>
+                    <p class="Small-Font Normal-Family Medium-Margin Bold-Font Centered-Text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quibusdam aut illo recusandae, eligendi, excepturi odit, quae iure impedit eos sapiente et ea temporibus quam tempore corporis tenetur delectus laborum?</p>
+                </div>
+
+                <div class="TextSectionCards">
+                    <div class="TextSectionCardsBar">
+                        <img src="/Eindopdracht travelly/icons/plane-departure-solid.svg" alt="PlaneIcon" class="TextSectionCardsBarIcons">
+                    </div>
+                    <p class="Medium-Font Normal-Family Large-Margin Bold-Font">Fly</p>
+                    <p class="Small-Font Normal-Family Medium-Margin Bold-Font Centered-Text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias quis, omnis quo molestias harum corporis tempore dolore cum quaerat vel quod, non consectetur nihil ab atque reiciendis rem beatae id?</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="Contact">
+            <div id="ContactDiv">
+
+                <form id="ContactForm">
+                    <p class="Large-Font Normal-Family Small-Margin Bold-Font White-Font">Contact us</p>
+                    <div>
+                        <label for="Name" class="Small-Font Normal-Family White-Font Small-Margin">Name:</label>
+                        <input type="text" name="Name" class="ContactInput">
+                    </div>
+
+                    <div >
+                        <label for="Email" class="Small-Font Normal-Family White-Font Small-Margin">Email:</label>
+                        <input type="email" name="Email" class="ContactInput">
+                    </div>
+                    <input type="submit" value="Submit" id="ContactSubmit" class="Small-Font White-Font Normal-Family">    
+                </form>
+
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <div id="Logofooter">
+            <p class="Medium-Font Normal-Family White-Font Left-Margin Bold-Font" id="NavLogo">Travelly</p>
+        </div>
+        <div id="Socialfooter">
+            <img src="/Eindopdracht travelly/icons/twitter.svg" alt="Twitter Logo" class="FooterIcons">
+            <img src="/Eindopdracht travelly/icons/youtube.svg" alt="Youtube Logo" class="FooterIcons">
+            <img src="/Eindopdracht travelly/icons/instagram.svg" alt="Instagram Logo" class="FooterIcons">
+        </div>
+    </footer>
 </body>
 </html>
